--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,12 @@
 src = 'src'
 out = 'out'
 libs = ['lib']
+gas_reports = ["*"]
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
+
+[rpc_endpoints]
+goerli = "${GOERLI_RPC_URL}"
+
+[etherscan]
+goerli = { key = "${ETHERSCAN_API_KEY}" }
